evaluation/capybarakv_interface/src/bindings.rs

extern "C" {
    pub fn rocksdb_options_set_max_file_opening_threads(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_get_max_file_opening_threads(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_options_set_max_total_wal_size(opt: *mut rocksdb_options_t, n: u64);
}
extern "C" {
    pub fn rocksdb_options_get_max_total_wal_size(opt: *mut rocksdb_options_t) -> u64;
}
extern "C" {
    pub fn rocksdb_options_set_compression_options(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
        arg3: ::std::os::raw::c_int,
        arg4: ::std::os::raw::c_int,
        arg5: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_compression_options_zstd_max_train_bytes(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_bottommost_compression_options(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
        arg3: ::std::os::raw::c_int,
        arg4: ::std::os::raw::c_int,
        arg5: ::std::os::raw::c_int,
        arg6: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_bottommost_compression_options_zstd_max_train_bytes(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
        arg3: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_prefix_extractor(
        arg1: *mut rocksdb_options_t,
        arg2: *mut rocksdb_slicetransform_t,
    );
}
extern "C" {
    pub fn rocksdb_options_set_num_levels(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_get_num_levels(arg1: *mut rocksdb_options_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_options_set_level0_file_num_compaction_trigger(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_get_level0_file_num_compaction_trigger(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_options_set_level0_slowdown_writes_trigger(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_get_level0_slowdown_writes_trigger(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_options_set_level0_stop_writes_trigger(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_get_level0_stop_writes_trigger(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_options_set_max_mem_compaction_level(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_target_file_size_base(arg1: *mut rocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn rocksdb_options_get_target_file_size_base(arg1: *mut rocksdb_options_t) -> u64;
}
extern "C" {
    pub fn rocksdb_options_set_target_file_size_multiplier(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_get_target_file_size_multiplier(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_options_set_max_bytes_for_level_base(arg1: *mut rocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn rocksdb_options_get_max_bytes_for_level_base(arg1: *mut rocksdb_options_t) -> u64;
}
extern "C" {
    pub fn rocksdb_options_set_level_compaction_dynamic_level_bytes(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_get_level_compaction_dynamic_level_bytes(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_options_set_max_bytes_for_level_multiplier(
        arg1: *mut rocksdb_options_t,
        arg2: f64,
    );
}
extern "C" {
    pub fn rocksdb_options_get_max_bytes_for_level_multiplier(arg1: *mut rocksdb_options_t) -> f64;
}
extern "C" {
    pub fn rocksdb_options_set_max_bytes_for_level_multiplier_additional(
        arg1: *mut rocksdb_options_t,
        level_values: *mut ::std::os::raw::c_int,
        num_levels: usize,
    );
}
extern "C" {
    pub fn rocksdb_options_enable_statistics(arg1: *mut rocksdb_options_t);
}
extern "C" {
    pub fn rocksdb_options_set_skip_stats_update_on_db_open(
        opt: *mut rocksdb_options_t,
        val: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_get_skip_stats_update_on_db_open(
        opt: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_options_set_skip_checking_sst_file_sizes_on_db_open(
        opt: *mut rocksdb_options_t,
        val: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_get_skip_checking_sst_file_sizes_on_db_open(
        opt: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_options_statistics_get_string(
        opt: *mut rocksdb_options_t,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocksdb_options_set_max_write_buffer_number(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_get_max_write_buffer_number(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_options_set_min_write_buffer_number_to_merge(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_get_min_write_buffer_number_to_merge(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_options_set_max_write_buffer_number_to_maintain(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_get_max_write_buffer_number_to_maintain(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rocksdb_options_set_max_write_buffer_size_to_maintain(
        arg1: *mut rocksdb_options_t,
        arg2: i64,
    );
}
extern "C" {
    pub fn rocksdb_options_get_max_write_buffer_size_to_maintain(
        arg1: *mut rocksdb_options_t,
    ) -> i64;
}
extern "C" {
    pub fn rocksdb_options_set_enable_pipelined_write(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_get_enable_pipelined_write(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_options_set_unordered_write(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_get_unordered_write(
        arg1: *mut rocksdb_options_t,
    ) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn rocksdb_options_set_max_subcompactions(arg1: *mut rocksdb_options_t, arg2: u32);
}
extern "C" {
    pub fn rocksdb_options_get_max_subcompactions(arg1: *mut rocksdb_options_t) -> u32;
}
extern "C" {
    pub fn rocksdb_options_set_max_background_jobs(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_max_background_compactions(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_base_background_compactions(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_max_background_flushes(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_max_log_file_size(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_set_log_file_time_to_roll(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_set_keep_log_file_num(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_set_recycle_log_file_num(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_set_soft_rate_limit(arg1: *mut rocksdb_options_t, arg2: f64);
}
extern "C" {
    pub fn rocksdb_options_set_hard_rate_limit(arg1: *mut rocksdb_options_t, arg2: f64);
}
extern "C" {
    pub fn rocksdb_options_set_soft_pending_compaction_bytes_limit(
        opt: *mut rocksdb_options_t,
        v: usize,
    );
}
extern "C" {
    pub fn rocksdb_options_set_hard_pending_compaction_bytes_limit(
        opt: *mut rocksdb_options_t,
        v: usize,
    );
}
extern "C" {
    pub fn rocksdb_options_set_rate_limit_delay_max_milliseconds(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn rocksdb_options_set_max_manifest_file_size(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_set_table_cache_numshardbits(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_table_cache_remove_scan_count_limit(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn rocksdb_options_set_arena_block_size(arg1: *mut rocksdb_options_t, arg2: usize);
}
extern "C" {
    pub fn rocksdb_options_set_use_fsync(arg1: *mut rocksdb_options_t, arg2: ::std::os::raw::c_int);
}
extern "C" {
    pub fn rocksdb_options_set_db_log_dir(
        arg1: *mut rocksdb_options_t,
        arg2: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_options_set_wal_dir(
        arg1: *mut rocksdb_options_t,
        arg2: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn rocksdb_options_set_WAL_ttl_seconds(arg1: *mut rocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn rocksdb_options_set_WAL_size_limit_MB(arg1: *mut rocksdb_options_t, arg2: u64);
}
extern "C" {
    pub fn rocksdb_options_set_manifest_preallocation_size(
        arg1: *mut rocksdb_options_t,
        arg2: usize,
    );
}
extern "C" {
    pub fn rocksdb_options_set_purge_redundant_kvs_while_flush(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_allow_mmap_reads(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_allow_mmap_writes(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_use_direct_reads(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_use_direct_io_for_flush_and_compaction(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_is_fd_close_on_exec(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_skip_log_error_on_recovery(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_stats_dump_period_sec(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uint,
    );
}
extern "C" {
    pub fn rocksdb_options_set_advise_random_on_open(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn rocksdb_options_set_access_hint_on_compaction_start(
        arg1: *mut rocksdb_options_t,
        arg2: ::std::os::raw::c_int,
    );
}
